--- a/VeterinariaOnlineApi.Model/VeterinariaOnlineApi.Core.csproj
+++ b/VeterinariaOnlineApi.Model/VeterinariaOnlineApi.Core.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.3" />
+  </ItemGroup>
+
 </Project>
