--- a/VeterinariaOnlineApi.Infraestructura/VeterinariaOnlineApi.Infraestructura.csproj
+++ b/VeterinariaOnlineApi.Infraestructura/VeterinariaOnlineApi.Infraestructura.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\VeterinariaOnlineApi.Model\VeterinariaOnlineApi.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Servicios\AuthServices\Interfaces\" />
+  </ItemGroup>
+
 </Project>
