--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /VeterinariaOnlineApi.WebApi/appsettings.json
+/Diagrama Autenticacion JWT.drawio
