add mejora en el servico de gestion de usuario

--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,4 @@ MigrationBackup/
 FodyWeavers.xsd
 /VeterinariaOnlineApi.WebApi/appsettings.json
 /Diagrama Autenticacion JWT.drawio
+/VeterinariaOnlineApi.WebApi/VeterinariaOnlineApi.WebApi.http
